# bec_log_ingestor

./: CHANGELOG.md  Cargo.toml  Cross.toml  README.md  build.rs
.github/workflows/: check-and-lint.yaml  release.yaml  test-and-coverage.yaml
install/: bec_log_ingestor-config.path  bec_log_ingestor-config.service  bec_log_ingestor.service  example_config.toml  example_metrics_config.toml  restart_service  setup_user
src/: config.rs  elastic_push.rs  example_config.toml  loki_push.rs  main.rs  metrics.rs  metrics_core.rs  models.rs  prometheus_write.proto  redis_logs.rs  status_message.rs  status_message_schema.json
src/models/: dynamic_metric_message.rs  log_message.rs  metric_message_schema.json  mod.rs
src/tests/: loki_integration_test.rs  metrics_integration_test.rs  mod.rs
test/: test_metrics_config.toml
