[package]
name = "bec_log_ingestor"
description = "Tiny service to pull BEC logs from Redis and push them to Loki"
readme = "README.md"
repository = "https://github.com/bec-project/bec_log_ingestor"
keywords = ["logging", "BEC"]
categories = ["science", "command-line-utilities"]
license = "Apache-2.0"
version = "1.4.2"
edition = "2024"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/bec_log_ingestor", dest = "/usr/local/bin/bec_log_ingestor", mode = "755" },
    { source = "install/bec_log_ingestor.service", dest = "/lib/systemd/system/bec_log_ingestor.service", mode = "755" },
]
pre_install_script = "install/setup_user"
pre_install_script_prog = ["/bin/bash"]
pre_install_script_flags = 0b100
post_install_script = "install/restart_service"
post_install_script_prog = ["/bin/bash"]
post_install_script_flags = 0b100

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.52", features = ["derive"] }
redis = "0.32.7"
reqwest = { version = "0.12.24", features = ["json"] }
rmp-serde = "1.3.0"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
    "full",
    "rt-multi-thread",
    "sync",
    "tokio-macros",
] }
toml = "0.9.8"
