[package]
name = "bec_log_ingestor"
description = "Tiny service to pull BEC logs from Redis and push them to Loki"
readme = "README.md"
repository = "https://github.com/bec-project/bec_log_ingestor"
keywords = ["logging", "BEC"]
categories = ["science", "command-line-utilities"]
license = "Apache-2.0"
version = "1.6.0"
edition = "2024"

[package.metadata.generate-rpm]
assets = [
    { source = "target/x86_64-unknown-linux-gnu/release/bec_log_ingestor", dest = "/usr/local/bin/bec_log_ingestor", mode = "755" },
    { source = "install/bec_log_ingestor.service", dest = "/lib/systemd/system/bec_log_ingestor.service", mode = "755" },
]
pre_install_script = "install/setup_user"
pre_install_script_prog = ["/bin/bash"]
pre_install_script_flags = 0b100
post_install_script = "install/restart_service"
post_install_script_prog = ["/bin/bash"]
post_install_script_flags = 0b100

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.58", features = ["derive"] }
futures = "0.3.32"
prost = "0.14.3"
redis = { version = "0.32.7", features = ["tokio-rustls-comp"] }
reqwest = { version = "0.13.2", features = ["json"] }
rmp-serde = "1.3.1"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
snap = "1.1.1"
sysinfo = "0.37.2"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
    "full",
    "rt-multi-thread",
    "sync",
    "tokio-macros",
] }
toml = "0.9.12"

[build-dependencies]
prost-build = "0.14.3"
which = "8.0.0"
bindgen = "0.72.1"
aws-lc-rs = { version = "1", features = [
    "bindgen",
] } # This is a workaround for failing builds on arm. See: https://github.com/rustls/rustls/issues/1788
