[package]
name = "bec_log_ingestor"
description = "Tiny service to pull BEC logs from Redis and push them to Loki"
readme = "README.md"
repository = "https://github.com/bec-project/bec_log_ingestor"
keywords = ["logging", "BEC"]
categories = ["science", "command-line-utilities"]
license = "Apache-2.0"
version = "1.13.3"
edition = "2024"

[package.metadata.generate-rpm]
assets = [
    { source = "target/x86_64-unknown-linux-gnu/release/bec_log_ingestor", dest = "/usr/local/bin/bec_log_ingestor", mode = "755" },
    { source = "install/bec_log_ingestor.service", dest = "/lib/systemd/system/bec_log_ingestor.service", mode = "755" },
    { source = "install/bec_log_ingestor-config.path", dest = "/lib/systemd/system/bec_log_ingestor-config.path", mode = "644" },
    { source = "install/bec_log_ingestor-config.service", dest = "/lib/systemd/system/bec_log_ingestor-config.service", mode = "644" },
]
pre_install_script = "install/setup_user"
pre_install_script_prog = ["/bin/bash"]
pre_install_script_flags = 0b100
post_install_script = "install/restart_service"
post_install_script_prog = ["/bin/bash"]
post_install_script_flags = 0b100

[dependencies]
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
prost = "0.14.4"
redis = { version = "1.2.3", features = ["tls-rustls", "tokio-rustls-comp"] }
reqwest = { version = "0.13.4", features = ["json"] }
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.150"
snap = "1.1.1"
sysinfo = "0.39.3"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
    "full",
    "rt-multi-thread",
    "sync",
    "tokio-macros",
] }
toml = "1.1.2"
rustls = { version = "0.23" }
gethostname = "1.1.0"
serde_path_to_error = "0.1.20"

[dev-dependencies]
mockito = "1.7.2"
testcontainers-modules = { version = "0.15.0", features = ["redis"] }

[build-dependencies]
prost-build = "0.14.4"
which = "8.0.3"
bindgen = "0.72.1"
aws-lc-rs = { version = "1", features = [
    "bindgen",
] } # This is a workaround for failing builds on arm. See: https://github.com/rustls/rustls/issues/1788

[lints.clippy]
dbg_macro = "deny"
